--- a/web/html/input/image/input_image.html
+++ b/web/html/input/image/input_image.html
@@ -44,23 +44,16 @@
   <input type="file" id="fileElem" multiple="" accept="image/*" style="display:none" onchange="handleFiles(this.files)">
   <a href="#" id="fileSelect">Select some images</a>
   <div id="fileList">
-    <p>No files selected!</p>
+    <p>No images selected!</p>
   </div>
 
-  <input type="file" id="pdfElem" multiple="" accept="application/pdf" style="display:none"
-    onchange="handlePdf(this.files)">
-  <a href="#" id="pdfSelect">Select some PDFs</a>
-  <div id="pdfList">
-    <p>No PDFs selected!</p>
-  </div>
 
   <script>
+    // https://developer.mozilla.org/zh-CN/docs/Web/API/File_API/Using_files_from_web_applications#%E7%A4%BA%E4%BE%8B%EF%BC%9A%E4%BD%BF%E7%94%A8%E5%AF%B9%E8%B1%A1_url_%E6%9D%A5%E6%98%BE%E7%A4%BA%E5%9B%BE%E7%89%87
     window.URL = window.URL || window.webkitURL;
     window.onload = function () {
       selectImages()
-      selectPdf()
     }
-    // https://developer.mozilla.org/zh-CN/docs/Web/API/File_API/Using_files_from_web_applications#%E7%A4%BA%E4%BE%8B%EF%BC%9A%E4%BD%BF%E7%94%A8%E5%AF%B9%E8%B1%A1_url_%E6%9D%A5%E6%98%BE%E7%A4%BA%E5%9B%BE%E7%89%87
     function selectImages() {
       var fileSelect = document.getElementById("fileSelect"),
         fileElem = document.getElementById("fileElem"),
@@ -72,7 +65,6 @@
         }
         e.preventDefault(); // prevent navigation to "#"
       }, false);
-
     }
 
     function handleFiles(files) {
@@ -98,58 +90,7 @@
         }
       }
     }
-
-    function selectPdf() {
-      var pdfSelect = document.getElementById("pdfSelect"),
-        pdfElem = document.getElementById("pdfElem"),
-        pdfList = document.getElementById("pdfList");
-
-      pdfSelect.addEventListener("click", function (e) {
-        if (pdfElem) {
-          pdfElem.click();
-        }
-        e.preventDefault(); // prevent navigation to "#"
-      }, false);
-    }
-
-    function handlePdf(files) {
-      if (!files.length) {
-        pdfList.innerHTML = "<p>No files selected!</p>";
-      } else {
-        pdfList.innerHTML = "";
-        var list = document.createElement("ul");
-        pdfList.appendChild(list);
-        for (var i = 0; i < files.length; i++) {
-          var li = document.createElement("li");
-          list.appendChild(li);
-
-          // https://developer.mozilla.org/zh-CN/docs/Web/API/File_API/Using_files_from_web_applications#%E4%BE%8B%E5%AD%90%EF%BC%9A%E7%94%A8%E5%AF%B9%E8%B1%A1_url_%E6%98%BE%E7%A4%BA_pdf
-          // const obj_url = window.URL.createObjectURL(blob);
-          const obj_url = window.URL.createObjectURL(files[i]);
-          console.log('pdf createObjectURL: ', obj_url);
-          // img.src = window.URL.createObjectURL(files[i]);
-          const iframe = document.getElementById('viewer');
-          iframe.setAttribute('src', obj_url);
-          window.URL.revokeObjectURL(obj_url);
-
-          // var img = document.createElement("img");
-          // img.src = window.URL.createObjectURL(files[i]);
-          // img.height = 60;
-          // img.onload = function () {
-          //   window.URL.revokeObjectURL(this.src);
-          // }
-          // li.appendChild(img);
-
-          var info = document.createElement("span");
-          info.innerHTML = files[i].name + ": " + files[i].size + " bytes";
-          li.appendChild(info);
-        }
-      }
-    }
-
   </script>
-
-  <iframe id="viewer">
 
 </body>
 <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
