--- a/web/html/input/image/image_createObjectUrl(blob).html
+++ b/web/html/input/image/image_createObjectUrl(blob).html
@@ -35,18 +35,19 @@
       padding: 5px 10px 5px 26px;
     }
   </style>
-
+  <script src="./imageBase64.js"></script>
   <title>在 web 应用程序中使用文件 - 示例：使用对象_url_来显示图片 - code sample</title>
-  <script src="./pdfBase64_145k.js"></script>
-  <script src="./pdfBase64_2.6M.js"></script>
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.1022.0" data-gr-ext-installed="">
 
+  <input type="file" id="fileElem" multiple="" accept="image/*" style="display:none" onchange="handleFiles(this.files)">
+  <a href="#" id="fileSelect">Select some images</a>
+  <div id="fileList">
+    <p>No images selected!</p>
+  </div>
 
-  <button onclick="handleImage()">pdf_createObjectUrl(blob) 145K</button>
-  <br />
-  <button onclick="handleImage2()">pdf_createObjectUrl(blob) 2.6M </button>
+  <button onclick="handleImage()">image_createObjectUrl(blob) </button>
 
   <script>
     // https://developer.mozilla.org/zh-CN/docs/Web/API/File_API/Using_files_from_web_applications#%E7%A4%BA%E4%BE%8B%EF%BC%9A%E4%BD%BF%E7%94%A8%E5%AF%B9%E8%B1%A1_url_%E6%9D%A5%E6%98%BE%E7%A4%BA%E5%9B%BE%E7%89%87
@@ -78,35 +79,42 @@
       fetch(`data:${type};base64,${base64}`).then(res => res.blob())
 
     async function handleImage() {
-      var b = pdfBase64_145k;
-      const blob = await b64toBlob(b, 'application/pdf')
+      var b = imageBase64
+      const blob = await b64toBlob(b, 'image/png')
       console.log('handleImage blob: ', blob)
       const blobUrl = window.URL.createObjectURL(blob)
       console.log('handleImage blobUrl: ', blobUrl)
-
-      const iframe = document.getElementById('viewer');
-      iframe.setAttribute('src', blobUrl);
-      window.URL.revokeObjectURL(blobUrl);
+      handleFiles(blobUrl)
     }
 
-    async function handleImage2() {
-      var b = pdfBase64_2dot6M;
-      const blob = await b64toBlob(b, 'application/pdf')
-      console.log('handleImage blob: ', blob)
-      const blobUrl = window.URL.createObjectURL(blob)
-      console.log('handleImage blobUrl: ', blobUrl)
+    function handleFiles(blobUrl) {
+      fileList = document.getElementById("fileList");
+      // if (!files.length) {
+      //   fileList.innerHTML = "<p>No images selected!</p>";
+      // } else {
+      fileList.innerHTML = "";
+      var list = document.createElement("ul");
+      fileList.appendChild(list);
 
-      const iframe = document.getElementById('viewer2');
-      iframe.setAttribute('src', blobUrl);
-      window.URL.revokeObjectURL(blobUrl);
+      // for (var i = 0; i < files.length; i++) {
+      var li = document.createElement("li");
+      list.appendChild(li);
+      var img = document.createElement("img");
+      img.src = blobUrl;
+      img.height = 300;
+      img.onload = function () {
+        window.URL.revokeObjectURL(this.src);
+      }
+      li.appendChild(img);
+      // var info = document.createElement("span");
+      // info.innerHTML = files[i].name + ": " + files[i].size + " bytes";
+      // li.appendChild(info);
+      // }
+      // }
     }
-
   </script>
 
 </body>
 <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
-
-<iframe id="viewer"></iframe>
-<iframe id="viewer2"></iframe>
 
 </html>
